--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alchemy-sdk": "^2.6.3",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "prismjs": "^1.29.0",
